--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,33 @@
-html,
 body {
-  margin: 0;
-  padding: 20px;
+  padding: 20px 40px;
   background: #fff;
   color: #000;
 }
 
-html {
-  font-family: 'Droid Sans Mono', monospace;
-  font-size: 20px;
+h1, h4 { font-family: 'Droid Sans Mono', monospace; }
+
+h1 {
+  padding-bottom: 20px;
+  font-weight: bold;
 }
 
-ul { padding: 10px 10px 10px 0; }
+h4 { padding: 5px 0; }
+
+ul { padding: 15px 0 0; }
 
 li {
   display: inline;
   list-style: none;
 }
 
-a { color: #000; }
-
-@media (max-width: 40em) {
-  html {
-    font-size: 16px;
-  }
+a {
+  color: #000 !important;
+  font-size: 20px;
 }
 
 .nightmode {
   background: #000;
-  color: #fff;
+  color: #fff !important;;
 }
 
 .fa-adjust {
@@ -36,7 +35,7 @@ a { color: #000; }
   cursor: pointer;
 }
 
-.fa-3x { padding: 10px 10px; }
+.fa-3x { padding: 10px; }
 
 .fa-envelope:hover { color: #da3838; }
 .fa-github:hover { color: #333; }
@@ -51,3 +50,9 @@ a { color: #000; }
 .fa-youtube:hover { color: #bb0000; }
 .fa-tumblr:hover { color: #32506d; }
 .fa-soundcloud:hover { color: #ff3a00; }
+
+@media (max-width: 40em) {
+  h1 { font-size: 27px; }
+  h4, a { font-size: 15px; }
+  .fa-adjust { font-size: 8px; }
+}
