--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ a {
 }
 
 .fa-adjust {
+  display: inline;
   font-size: 10px;
   cursor: pointer;
 }
@@ -52,7 +53,7 @@ a {
 .fa-soundcloud:hover { color: #ff3a00; }
 
 @media (max-width: 40em) {
-  h1 { font-size: 27px; }
+  h1 { font-size: 26px; }
   h4, a { font-size: 15px; }
   .fa-adjust { font-size: 8px; }
 }
